--- a/IdentityServerWithAspNetIdentity/Views/Account/SignedOut.cshtml
+++ b/IdentityServerWithAspNetIdentity/Views/Account/SignedOut.cshtml
@@ -1,8 +1,8 @@
 ﻿@{
-    ViewData["Title"] = "Signed out";
+    ViewData["Title"] = "登出";
 }
 
 <h2>@ViewData["Title"]</h2>
 <p>
-    You have successfully signed out.
+    您已经登出了系统.
 </p>
