--- a/IdentityServerWithAspNetIdentity/Views/Home/Contact.cshtml
+++ b/IdentityServerWithAspNetIdentity/Views/Home/Contact.cshtml
@@ -1,8 +1,7 @@
 ﻿@{
-    ViewData["Title"] = "Contact";
+    ViewData["Title"] = "联系方式";
 }
 <h2>@ViewData["Title"]</h2>
-<h3>@ViewData["Message"]</h3>
 
 <address>
     One Microsoft Way<br />
