--- a/IdentityServerWithAspNetIdentity/Views/Account/ForgotPassword.cshtml
+++ b/IdentityServerWithAspNetIdentity/Views/Account/ForgotPassword.cshtml
@@ -1,10 +1,10 @@
 ﻿@model ForgotPasswordViewModel
 @{
-    ViewData["Title"] = "Forgot your password?";
+    ViewData["Title"] = "忘记您的密码了?";
 }
 
 <h2>@ViewData["Title"]</h2>
-<h4>Enter your email.</h4>
+<h4>请输入您的 Email.</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -15,7 +15,7 @@
                 <input asp-for="Email" class="form-control" />
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
-            <button type="submit" class="btn btn-default">Submit</button>
+            <button type="submit" class="btn btn-default">提交</button>
         </form>
     </div>
 </div>
