--- a/IdentityServerWithAspNetIdentity/Views/Account/LoggedOut.cshtml
+++ b/IdentityServerWithAspNetIdentity/Views/Account/LoggedOut.cshtml
@@ -7,15 +7,15 @@
 
 <div class="page-header logged-out">
     <h1>
-        Logout
-        <small>You are now logged out</small>
+        登出
+        <small>您已经登出了系统</small>
     </h1>
 
     @if (Model.PostLogoutRedirectUri != null)
     {
         <div>
-            Click <a class="PostLogoutRedirectUri" href="@Model.PostLogoutRedirectUri">here</a> to return to the
-            <span>@Model.ClientName</span> application.
+            点击 <a class="PostLogoutRedirectUri" href="@Model.PostLogoutRedirectUri">这里</a> 来返回到
+            <span>@Model.ClientName</span> 系统.
         </div>
     }
 
