--- a/IdentityServerWithAspNetIdentity/Views/Manage/_Layout.cshtml
+++ b/IdentityServerWithAspNetIdentity/Views/Manage/_Layout.cshtml
@@ -2,10 +2,10 @@
     Layout = "/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Manage your account</h2>
+<h2>管理您的账户</h2>
 
 <div>
-    <h4>Change your account settings</h4>
+    <h4>修改您账户的设置</h4>
     <hr />
     <div class="row">
         <div class="col-md-3">
