--- a/IdentityServerWithAspNetIdentity/Views/Shared/_LoginPartial.cshtml
+++ b/IdentityServerWithAspNetIdentity/Views/Shared/_LoginPartial.cshtml
@@ -14,7 +14,7 @@
                 <a asp-area="" asp-controller="Manage" asp-action="Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
             </li>
             <li>
-                <button type="submit" class="btn btn-link navbar-btn navbar-link">Log out</button>
+                <button type="submit" class="btn btn-link navbar-btn navbar-link">µÇ³ö</button>
             </li>
         </ul>
     </form>
@@ -22,7 +22,7 @@
 else
 {
     <ul class="nav navbar-nav navbar-right">
-        <li><a asp-area="" asp-controller="Account" asp-action="Register">Register</a></li>
-        <li><a asp-area="" asp-controller="Account" asp-action="Login">Log in</a></li>
+        <li><a asp-area="" asp-controller="Account" asp-action="Register">×¢²á</a></li>
+        <li><a asp-area="" asp-controller="Account" asp-action="Login">µÇÂ½</a></li>
     </ul>
 }
