--- a/AuthorizationServer/Views/Manage/ChangePassword.cshtml
+++ b/AuthorizationServer/Views/Manage/ChangePassword.cshtml
@@ -1,5 +1,6 @@
-﻿@using AuthorizationServer.Views.Manage
-@model ChangePasswordViewModel
+﻿@using AuthorizationServer.Models.ManageViewModels
+@using AuthorizationServer.Views.Manage
+@model AuthorizationServer.Models.ManageViewModels.ChangePasswordViewModel
 @{
     ViewData["Title"] = "修改密码";
     ViewData.AddActivePage(ManageNavPages.ChangePassword);
