--- a/AuthorizationServer/Views/Manage/GenerateRecoveryCodes.cshtml
+++ b/AuthorizationServer/Views/Manage/GenerateRecoveryCodes.cshtml
@@ -1,5 +1,6 @@
-﻿@using AuthorizationServer.Views.Manage
-@model GenerateRecoveryCodesViewModel
+﻿@using AuthorizationServer.Models.ManageViewModels
+@using AuthorizationServer.Views.Manage
+@model AuthorizationServer.Models.ManageViewModels.GenerateRecoveryCodesViewModel
 @{
     ViewData["Title"] = "Recovery codes";
     ViewData.AddActivePage(ManageNavPages.TwoFactorAuthentication);
