--- a/AuthorizationServer/Views/Manage/Index.cshtml
+++ b/AuthorizationServer/Views/Manage/Index.cshtml
@@ -1,5 +1,6 @@
-﻿@using AuthorizationServer.Views.Manage
-@model IndexViewModel
+﻿@using AuthorizationServer.Models.ManageViewModels
+@using AuthorizationServer.Views.Manage
+@model AuthorizationServer.Models.ManageViewModels.IndexViewModel
 @{
     ViewData["Title"] = "用户档案";
     ViewData.AddActivePage(ManageNavPages.Index);
