--- a/AuthorizationServer/Views/Manage/SetPassword.cshtml
+++ b/AuthorizationServer/Views/Manage/SetPassword.cshtml
@@ -1,5 +1,6 @@
-﻿@using AuthorizationServer.Views.Manage
-@model SetPasswordViewModel
+﻿@using AuthorizationServer.Models.ManageViewModels
+@using AuthorizationServer.Views.Manage
+@model AuthorizationServer.Models.ManageViewModels.SetPasswordViewModel
 @{
     ViewData["Title"] = "Set password";
     ViewData.AddActivePage(ManageNavPages.ChangePassword);
