--- a/AuthorizationServer/Views/Manage/TwoFactorAuthentication.cshtml
+++ b/AuthorizationServer/Views/Manage/TwoFactorAuthentication.cshtml
@@ -1,5 +1,6 @@
+@using AuthorizationServer.Models.ManageViewModels
 @using AuthorizationServer.Views.Manage
-@model TwoFactorAuthenticationViewModel
+@model AuthorizationServer.Models.ManageViewModels.TwoFactorAuthenticationViewModel
 @{
     ViewData["Title"] = "Two-factor authentication";
     ViewData.AddActivePage(ManageNavPages.TwoFactorAuthentication);
