--- a/AuthorizationServer/Views/Account/AccessDenied.cshtml
+++ b/AuthorizationServer/Views/Account/AccessDenied.cshtml
@@ -3,6 +3,6 @@
 }
 
 <header>
-    <h2 class="text-danger">ViewData["Title"]</h2>
-    <p class="text-danger">You do not have access to this resource.</p>
+    <h2 class="text-danger">@ViewData["Title"]</h2>
+    <p class="text-danger">您没有此页面的访问权限.</p>
 </header>
