--- a/AuthorizationServer/Views/Manage/ExternalLogins.cshtml
+++ b/AuthorizationServer/Views/Manage/ExternalLogins.cshtml
@@ -1,5 +1,6 @@
-﻿@using AuthorizationServer.Views.Manage
-@model ExternalLoginsViewModel
+﻿@using AuthorizationServer.Models.ManageViewModels
+@using AuthorizationServer.Views.Manage
+@model AuthorizationServer.Models.ManageViewModels.ExternalLoginsViewModel
 @{
     ViewData["Title"] = "Manage your external logins";
     ViewData.AddActivePage(ManageNavPages.ExternalLogins);
