--- a/AuthorizationServer/Views/Manage/_ManageNav.cshtml
+++ b/AuthorizationServer/Views/Manage/_ManageNav.cshtml
@@ -1,4 +1,6 @@
-﻿@using AuthorizationServer.Views.Manage
+﻿@using AuthorizationServer.Models
+@using AuthorizationServer.Views.Manage
+@using Microsoft.AspNetCore.Identity
 @inject SignInManager<ApplicationUser> SignInManager
 @{
     var hasExternalLogins = (await SignInManager.GetExternalAuthenticationSchemesAsync()).Any();
