update to internal use

--- a/AuthorizationServer/Views/Manage/_ManageNav.cshtml
+++ b/AuthorizationServer/Views/Manage/_ManageNav.cshtml
@@ -13,6 +13,6 @@
     {
         <li class="@ManageNavPages.ExternalLoginsNavClass(ViewContext)"><a asp-action="ExternalLogins">外部登陆</a></li>
     }
-    <li class="@ManageNavPages.TwoFactorAuthenticationNavClass(ViewContext)"><a asp-action="TwoFactorAuthentication">二步验证</a></li>
+    @*<li class="@ManageNavPages.TwoFactorAuthenticationNavClass(ViewContext)"><a asp-action="TwoFactorAuthentication">二步验证</a></li>*@
 </ul>
 
