--- a/AuthorizationServer/Views/Account/Login.cshtml
+++ b/AuthorizationServer/Views/Account/Login.cshtml
@@ -40,18 +40,18 @@
                 <div class="form-group">
                     <button type="submit" class="btn btn-default">登陆</button>
                 </div>
-                <div class="form-group">
+                @*<div class="form-group">
                     <p>
                         <a asp-action="ForgotPassword">忘记密码了?</a>
                     </p>
                     <p>
                         <a asp-action="Register" asp-route-returnurl="@ViewData["ReturnUrl"]">注册一个新账户?</a>
                     </p>
-                </div>
+                </div>*@
             </form>
         </section>
     </div>
-    <div class="col-md-6 col-md-offset-2">
+    @*<div class="col-md-6 col-md-offset-2">
         <section>
             <h4>Use another service to log in.</h4>
             <hr />
@@ -81,7 +81,7 @@
                 }
             }
         </section>
-    </div>
+    </div>*@
 </div>
 
 @section Scripts {
