--- a/AuthorizationServer/Views/Manage/Index.cshtml
+++ b/AuthorizationServer/Views/Manage/Index.cshtml
@@ -17,6 +17,11 @@
                 <input asp-for="Username" class="form-control" disabled />
             </div>
             <div class="form-group">
+                <label asp-for="Alias"></label>
+                <input asp-for="Alias" class="form-control" />
+                <span asp-validation-for="Alias" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="Email"></label>
                 @if (Model.IsEmailConfirmed)
                 {
@@ -28,7 +33,7 @@
                 else
                 {
                     <input asp-for="Email" class="form-control" />
-                    <button asp-action="SendVerificationEmail" class="btn btn-link">发送确认邮件</button>
+                    @*<button asp-action="SendVerificationEmail" class="btn btn-link">发送确认邮件</button>*@
                 }
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
