--- a/AuthorizationServer/Views/Shared/_Layout.cshtml
+++ b/AuthorizationServer/Views/Shared/_Layout.cshtml
@@ -31,8 +31,8 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">首页</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="About">关于</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">联系方式</a></li>
+                    @*<li><a asp-area="" asp-controller="Home" asp-action="About">关于</a></li>*@
+                    @*<li><a asp-area="" asp-controller="Home" asp-action="Contact">联系方式</a></li>*@
                     <li><a asp-area="" asp-controller="Account" asp-action="Users">用户管理</a></li>
                 </ul>
                 @await Html.PartialAsync("_LoginPartial")
