--- a/AuthorizationServer/Views/Home/Index.cshtml
+++ b/AuthorizationServer/Views/Home/Index.cshtml
@@ -7,8 +7,18 @@
         <div class="panel panel-info">
             <div class="panel-heading">后台管理系统</div>
             <div class="panel-body" style="padding-bottom: 0;">
-                <a href="@AdminClientSettings.CorsOrigin" class="thumbnail">
-                    <img src="images/admin.png" alt="后台管理系统">
+                <a href="@SalesApiSettings.CorsOrigin" class="thumbnail">
+                    <img src="images/admin.png" alt="后台管理系统" style="width: 220px; height: 220px;">
+                </a>
+            </div>
+        </div>
+    </div>
+    <div class="col-xs-6 col-md-3">
+        <div class="panel panel-info">
+            <div class="panel-heading">销售系统</div>
+            <div class="panel-body" style="padding-bottom: 0;">
+                <a href="@SalesApiSettings.CorsOrigin" class="thumbnail">
+                    <img src="images/sales.jpg" alt="销售系统" style="width: 220px; height: 220px;">
                 </a>
             </div>
         </div>
