--- a/AuthorizationServer/Views/Home/Index.cshtml
+++ b/AuthorizationServer/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@using SalesApi.Shared.Settings
+﻿@using AuthorizationServer
 @{
     ViewData["Title"] = "首页";
 }
@@ -7,7 +7,7 @@
         <div class="panel panel-info">
             <div class="panel-heading">销售系统</div>
             <div class="panel-body" style="padding-bottom: 0;">
-                <a href="@SalesApiSettings.CorsOrigin" class="thumbnail">
+                <a href="@Startup.Configuration["MLH:SalesApi:ClientBase"]" class="thumbnail">
                     <img src="images/sales.jpg" alt="销售系统" style="width: 220px; height: 220px;">
                 </a>
             </div>
