--- a/AuthorizationServer/Views/Account/AddUser.cshtml
+++ b/AuthorizationServer/Views/Account/AddUser.cshtml
@@ -1,7 +1,7 @@
 ﻿@using AuthorizationServer.Models.AccountViewModels
 @model AuthorizationServer.ViewModels.AddUserViewModel
 @{
-    ViewData["Title"] = "添加用户";
+    ViewData["Title"] = "Add User";
 }
 
 <h2>@ViewData["Title"]</h2>
@@ -12,7 +12,7 @@
 <div class="row">
     <div class="col-md-4">
         <form method="post">
-            <h4>建立新用户.</h4>
+            <h4>Create new user.</h4>
             <hr />
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
@@ -20,11 +20,11 @@
                 <input asp-for="UserName" class="form-control" />
                 <span asp-validation-for="UserName" class="text-danger"></span>
             </div>
-            <button type="submit" class="btn btn-default">保存</button>
+            <button type="submit" class="btn btn-default">Save</button>
         </form>
         <br />
         <p>
-            <a asp-action="Users"><span class="glyphicon glyphicon-circle-arrow-left" aria-hidden="true"></span> 返回到用户管理</a>
+            <a asp-action="Users"><span class="glyphicon glyphicon-circle-arrow-left" aria-hidden="true"></span> Back to user management page</a>
         </p>
     </div>
 </div>
