--- a/AuthorizationServer/Views/Account/ForgotPassword.cshtml
+++ b/AuthorizationServer/Views/Account/ForgotPassword.cshtml
@@ -1,11 +1,11 @@
 ﻿@using AuthorizationServer.Models.AccountViewModels
 @model AuthorizationServer.Models.AccountViewModels.ForgotPasswordViewModel
 @{
-    ViewData["Title"] = "忘记您的密码了?";
+    ViewData["Title"] = "Forget your password?";
 }
 
 <h2>@ViewData["Title"]</h2>
-<h4>请输入您的 Email.</h4>
+<h4>Please input your Email.</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -16,7 +16,7 @@
                 <input asp-for="Email" class="form-control" />
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
-            <button type="submit" class="btn btn-default">提交</button>
+            <button type="submit" class="btn btn-default">Submit</button>
         </form>
     </div>
 </div>
