--- a/AuthorizationServer/Views/Account/Login.cshtml
+++ b/AuthorizationServer/Views/Account/Login.cshtml
@@ -8,7 +8,7 @@
 @inject SignInManager<ApplicationUser> SignInManager
 
 @{
-    ViewData["Title"] = "登陆";
+    ViewData["Title"] = "Login";
 }
 
 <h2>@ViewData["Title"]</h2>
@@ -16,7 +16,7 @@
     <div class="col-md-4">
         <section>
             <form asp-route-returnurl="@ViewData["ReturnUrl"]" method="post">
-                <h4>使用本地账户登陆.</h4>
+                <h4>Login use a local account.</h4>
                 <hr />
                 <div asp-validation-summary="All" class="text-danger"></div>
                 <div class="form-group">
@@ -38,20 +38,20 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <button type="submit" class="btn btn-default">登陆</button>
+                    <button type="submit" class="btn btn-default">Login</button>
                 </div>
-                @*<div class="form-group">
+                <div class="form-group">
                     <p>
-                        <a asp-action="ForgotPassword">忘记密码了?</a>
+                        <a asp-action="ForgotPassword">Forget your password?</a>
                     </p>
                     <p>
-                        <a asp-action="Register" asp-route-returnurl="@ViewData["ReturnUrl"]">注册一个新账户?</a>
+                        <a asp-action="Register" asp-route-returnurl="@ViewData["ReturnUrl"]">Register a new account?</a>
                     </p>
-                </div>*@
+                </div>
             </form>
         </section>
     </div>
-    @*<div class="col-md-6 col-md-offset-2">
+    <div class="col-md-6 col-md-offset-2">
         <section>
             <h4>Use another service to log in.</h4>
             <hr />
@@ -81,7 +81,7 @@
                 }
             }
         </section>
-    </div>*@
+    </div>
 </div>
 
 @section Scripts {
