--- a/AuthorizationServer/Views/Account/Logout.cshtml
+++ b/AuthorizationServer/Views/Account/Logout.cshtml
@@ -3,17 +3,17 @@
 
 <div class="logout-page">
     <div class="page-header">
-        <h1>登出</h1>
+        <h1>Logout</h1>
     </div>
 
     <div class="row">
         <div class="col-sm-6">
-            <p>您想登出授权系统吗?</p>
+            <p>Do you want to logout the Authorization System?</p>
             <form asp-action="Logout">
                 <input type="hidden" name="logoutId" value="@Model.LogoutId"  />
                 <fieldset>
                     <div class="form-group">
-                        <button class="btn btn-primary">是的</button>
+                        <button class="btn btn-primary">Yes</button>
                     </div>
                 </fieldset>
             </form>
