--- a/AuthorizationServer/Views/Account/Register.cshtml
+++ b/AuthorizationServer/Views/Account/Register.cshtml
@@ -1,7 +1,7 @@
 ﻿@using AuthorizationServer.Models.AccountViewModels
 @model AuthorizationServer.Models.AccountViewModels.RegisterViewModel
 @{
-    ViewData["Title"] = "注册";
+    ViewData["Title"] = "Register";
 }
 
 <h2>@ViewData["Title"]</h2>
@@ -9,7 +9,7 @@
 <div class="row">
     <div class="col-md-4">
         <form asp-route-returnUrl="@ViewData["ReturnUrl"]" method="post">
-            <h4>建立新用户.</h4>
+            <h4>Create new account.</h4>
             <hr />
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
@@ -32,7 +32,7 @@
                 <input asp-for="ConfirmPassword" class="form-control" />
                 <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
             </div>
-            <button type="submit" class="btn btn-default">注册</button>
+            <button type="submit" class="btn btn-default">Register</button>
         </form>
     </div>
 </div>
