--- a/AuthorizationServer/Views/Consent/Index.cshtml
+++ b/AuthorizationServer/Views/Consent/Index.cshtml
@@ -10,7 +10,7 @@
             }
             <h1>
                 @Model.ClientName
-                <small>正在请求您的许可</small>
+                <small>is asking you for permission</small>
             </h1>
         </div>
     </div>
@@ -22,14 +22,14 @@
             <form asp-action="Index" class="consent-form">
                 <input type="hidden" asp-for="ReturnUrl" />
 
-                <div>您不想授权的项目请不要勾选.</div>
+                <div>Please don't check the items you don't want to grant.</div>
                 
                 @if (Model.IdentityScopes.Any())
                 {
                     <div class="panel panel-default consent-buttons">
                         <div class="panel-heading">
                             <span class="glyphicon glyphicon-user"></span>
-                            个人信息
+                            Profile
                         </div>
                         <ul class="list-group">
                             @foreach (var scope in Model.IdentityScopes)
@@ -45,7 +45,7 @@
                     <div class="panel panel-default">
                         <div class="panel-heading">
                             <span class="glyphicon glyphicon-tasks"></span>
-                            应用访问
+                            Application Access
                         </div>
                         <ul class="list-group">
                             @foreach (var scope in Model.ResourceScopes)
@@ -61,14 +61,14 @@
                     <div class="consent-remember">
                         <label>
                             <input class="consent-scopecheck" asp-for="RememberConsent" />
-                            <strong>记住我的决定</strong>
+                            <strong>Remember my decision</strong>
                         </label>
                     </div>
                 }
 
                 <div class="consent-buttons">
-                    <button name="button" value="yes" class="btn btn-primary" autofocus>是的, 允许</button>
-                    <button name="button" value="no" class="btn">不, 不允许</button>
+                    <button name="button" value="yes" class="btn btn-primary" autofocus>Yes, Allow</button>
+                    <button name="button" value="no" class="btn">No, Not Allow</button>
                     @if (Model.ClientUrl != null)
                     {
                         <a class="pull-right btn btn-default" target="_blank" href="@Model.ClientUrl">
