--- a/AuthorizationServer/Views/Home/Index.cshtml
+++ b/AuthorizationServer/Views/Home/Index.cshtml
@@ -1,14 +1,14 @@
 ﻿@using AuthorizationServer
 @{
-    ViewData["Title"] = "首页";
+    ViewData["Title"] = "Home";
 }
 <div class="row" style="margin-top: 25px;">
     <div class="col-xs-6 col-md-3">
         <div class="panel panel-info">
-            <div class="panel-heading">销售系统</div>
+            <div class="panel-heading">Sales Client</div>
             <div class="panel-body" style="padding-bottom: 0;">
                 <a href="@Startup.Configuration["SalesApi:ClientBase"]" class="thumbnail">
-                    <img src="images/sales.jpg" alt="销售系统" style="width: 220px; height: 220px;">
+                    <img src="images/sales.jpg" alt="Sales Client" style="width: 220px; height: 220px;">
                 </a>
             </div>
         </div>
