--- a/AuthorizationServer/Views/Manage/ChangePassword.cshtml
+++ b/AuthorizationServer/Views/Manage/ChangePassword.cshtml
@@ -2,7 +2,7 @@
 @using AuthorizationServer.Views.Manage
 @model AuthorizationServer.Models.ManageViewModels.ChangePasswordViewModel
 @{
-    ViewData["Title"] = "修改密码";
+    ViewData["Title"] = "Change Password";
     ViewData.AddActivePage(ManageNavPages.ChangePassword);
 }
 
@@ -27,7 +27,7 @@
                 <input asp-for="ConfirmPassword" class="form-control" />
                 <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
             </div>
-            <button type="submit" class="btn btn-default">更新密码</button>
+            <button type="submit" class="btn btn-default">Update Password</button>
         </form>
     </div>
 </div>
