--- a/AuthorizationServer/Views/Manage/Index.cshtml
+++ b/AuthorizationServer/Views/Manage/Index.cshtml
@@ -2,7 +2,7 @@
 @using AuthorizationServer.Views.Manage
 @model AuthorizationServer.Models.ManageViewModels.IndexViewModel
 @{
-    ViewData["Title"] = "用户档案";
+    ViewData["Title"] = "User Profile";
     ViewData.AddActivePage(ManageNavPages.Index);
 }
 
@@ -33,7 +33,7 @@
                 else
                 {
                     <input asp-for="Email" class="form-control" />
-                    @*<button asp-action="SendVerificationEmail" class="btn btn-link">发送确认邮件</button>*@
+                    <button asp-action="SendVerificationEmail" class="btn btn-link">Send confirmation mail</button>
                 }
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
@@ -42,7 +42,7 @@
                 <input asp-for="PhoneNumber" class="form-control" />
                 <span asp-validation-for="PhoneNumber" class="text-danger"></span>
             </div>
-            <button type="submit" class="btn btn-default">保存</button>
+            <button type="submit" class="btn btn-default">Save</button>
         </form>
     </div>
 </div>
