--- a/AuthorizationServer/Views/Shared/_Layout.cshtml
+++ b/AuthorizationServer/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - 授权中心</title>
+    <title>@ViewData["Title"] - Authorization System</title>
 
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -26,14 +26,14 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">授权中心</a>
+                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">Authorization System</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">首页</a></li>
-                    @*<li><a asp-area="" asp-controller="Home" asp-action="About">关于</a></li>*@
-                    @*<li><a asp-area="" asp-controller="Home" asp-action="Contact">联系方式</a></li>*@
-                    <li><a asp-area="" asp-controller="Account" asp-action="Users">用户管理</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li><a asp-area="" asp-controller="Account" asp-action="Users">User Management</a></li>
                 </ul>
                 @await Html.PartialAsync("_LoginPartial")
             </div>
