--- a/AuthorizationServer/Views/Shared/_LoginPartial.cshtml
+++ b/AuthorizationServer/Views/Shared/_LoginPartial.cshtml
@@ -14,7 +14,7 @@
                 <a asp-area="" asp-controller="Manage" asp-action="Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
             </li>
             <li>
-                <button type="submit" class="btn btn-link navbar-btn navbar-link">登出</button>
+                <button type="submit" class="btn btn-link navbar-btn navbar-link">Logout</button>
             </li>
         </ul>
     </form>
@@ -22,7 +22,7 @@
 else
 {
     <ul class="nav navbar-nav navbar-right">
-        @*<li><a asp-area="" asp-controller="Account" asp-action="Register">注册</a></li>*@
-        <li><a asp-area="" asp-controller="Account" asp-action="Login">登陆</a></li>
+        <li><a asp-area="" asp-controller="Account" asp-action="Register">Register</a></li>
+        <li><a asp-area="" asp-controller="Account" asp-action="Login">Login</a></li>
     </ul>
 }
