--- a/ng6-client/src/app/sales/components/sidenav/sidenav.component.html
+++ b/ng6-client/src/app/sales/components/sidenav/sidenav.component.html
@@ -12,7 +12,7 @@
   </mat-drawer>
 
   <div class="sidenav-content">
-    <app-toolbar (toggleSidenav)="drawer.toggle()"></app-toolbar>
+    <app-toolbar (toggleSidenav)="drawer.toggle()" class="mat-elevation-z5"></app-toolbar>
     <div class="wrapper">
       <router-outlet></router-outlet>
     </div>
