--- a/ng6-client/src/app/sales/components/sidenav/sidenav.component.scss
+++ b/ng6-client/src/app/sales/components/sidenav/sidenav.component.scss
@@ -1,24 +1,27 @@
 .sidenav-container {
-    flex: 1;
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    min-width: 100%;
-    min-height: 100%;
+  flex: 1;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  min-width: 100%;
+  min-height: 100%;
 }
 
 .sidenav-content {
-    display: flex;
-    height: 100%;
-    
-    flex-direction: column;
+  display: flex;
+  height: 100%;
+  flex-direction: column;
+  max-height: 100%;
 }
 
 .sidenav {
-    width: 240px;
+  width: 240px;
 }
 
 .wrapper {
-    margin: 50px;
+  margin: 50px;
+  @media (min-width: 720px) {
+    flex: auto;
+    overflow: auto;
   }
-  
+}
